# open-Qmin

./: CMakeLists.txt
inc/: qTensorFunctions.h  std_include.h  structures.h
src/forces/: lcForces.h
src/updaters/: baseUpdater.cpp
src/utilities/: utilities.cu
